fix: address PR review feedback
Security:
- Remove broad CSRF exemption for /api/** endpoints
- Add CSRF token meta tags to layout (conditional)
- Update contact form to include CSRF token in requests
- Add CSRF tokens to ContactControllerTest requests

Code Quality:
- Fix PII logging: log personal data at DEBUG level only
- Fix unsafe cast in GlobalExceptionAdvice using getFieldErrors()
- Remove redundant @ResponseStatus from ResponseEntity method
- Add @Size(max=254) constraint to email field per RFC 5321
- Add email size validation messages (EN/NL)

Bug Fixes:
- Fix HTML parsing issue by moving inline JavaScript to separate function
- Prevent Thymeleaf parser from interpreting JS keywords as HTML attributes

All 27 tests pass.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -188,5 +188,6 @@ contact.validation.name.required=Name is required
 contact.validation.name.size=Name must be between 2 and 100 characters
 contact.validation.email.required=Email is required
 contact.validation.email.invalid=Please enter a valid email address
+contact.validation.email.size=Email must be less than 254 characters
 contact.validation.message.required=Message is required
 contact.validation.message.size=Message must be between 10 and 2000 characters
