--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -188,5 +188,6 @@ contact.validation.name.required=Naam is verplicht
 contact.validation.name.size=Naam moet tussen 2 en 100 tekens zijn
 contact.validation.email.required=E-mail is verplicht
 contact.validation.email.invalid=Voer een geldig e-mailadres in
+contact.validation.email.size=E-mailadres moet minder dan 254 tekens zijn
 contact.validation.message.required=Bericht is verplicht
 contact.validation.message.size=Bericht moet tussen 10 en 2000 tekens zijn
