fix: address GitHub Copilot review comments
- Fix ClassCastException risk by using getFieldErrors()
- Narrow CSRF exemption to /api/contact only
- Remove PII (name/email) from logs
- Add Content-Type check for non-JSON error responses
- Remove unused ContactService injection from test
- Add response body assertions to validation tests
- Localize 'Validation failed' message with i18n support

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -191,3 +191,4 @@ contact.validation.email.invalid=Please enter a valid email address
 contact.validation.email.size=Email must be less than 254 characters
 contact.validation.message.required=Message is required
 contact.validation.message.size=Message must be between 10 and 2000 characters
+contact.validation.failed=Validation failed
