--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -191,3 +191,4 @@ contact.validation.email.invalid=Voer een geldig e-mailadres in
 contact.validation.email.size=E-mailadres moet minder dan 254 tekens zijn
 contact.validation.message.required=Bericht is verplicht
 contact.validation.message.size=Bericht moet tussen 10 en 2000 tekens zijn
+contact.validation.failed=Validatie mislukt
