feat: add HTTP caching and backend contact form (#71)
* feat: add HTTP caching and backend contact form

- Add HTTP caching configuration for static assets (365d cache period)
- Enable content-based cache busting for versioned static resources
- Implement backend contact form endpoint at /api/contact
- Add ContactRequest DTO with Jakarta validation constraints
- Add ContactController and ContactService for form processing
- Update frontend form to submit to backend with error handling
- Add validation messages in English and Dutch
- Add comprehensive tests for ContactController
- Disable CSRF for API endpoints to allow contact form submissions

* fix: address PR review feedback

Security:
- Remove broad CSRF exemption for /api/** endpoints
- Add CSRF token meta tags to layout (conditional)
- Update contact form to include CSRF token in requests
- Add CSRF tokens to ContactControllerTest requests

Code Quality:
- Fix PII logging: log personal data at DEBUG level only
- Fix unsafe cast in GlobalExceptionAdvice using getFieldErrors()
- Remove redundant @ResponseStatus from ResponseEntity method
- Add @Size(max=254) constraint to email field per RFC 5321
- Add email size validation messages (EN/NL)

Bug Fixes:
- Fix HTML parsing issue by moving inline JavaScript to separate function
- Prevent Thymeleaf parser from interpreting JS keywords as HTML attributes

All 27 tests pass.

* refactor: extract inline contact form script to external JS file

* fix: add field-level validation feedback to contact form

* fix: move contact form above LinkedIn and GitHub links

* fix: address GitHub Copilot review comments

- Fix ClassCastException risk by using getFieldErrors()
- Narrow CSRF exemption to /api/contact only
- Remove PII (name/email) from logs
- Add Content-Type check for non-JSON error responses
- Remove unused ContactService injection from test
- Add response body assertions to validation tests
- Localize 'Validation failed' message with i18n support

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -182,3 +182,13 @@ error.500.title=Server Error - Phi Tiet
 error.500.heading=Something Went Wrong
 error.500.message=An unexpected error occurred. Please try again later.
 error.back.home=Back to Home
+
+# Contact form validation
+contact.validation.name.required=Name is required
+contact.validation.name.size=Name must be between 2 and 100 characters
+contact.validation.email.required=Email is required
+contact.validation.email.invalid=Please enter a valid email address
+contact.validation.email.size=Email must be less than 254 characters
+contact.validation.message.required=Message is required
+contact.validation.message.size=Message must be between 10 and 2000 characters
+contact.validation.failed=Validation failed
