--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -182,3 +182,13 @@ error.500.title=Serverfout - Phi Tiet
 error.500.heading=Er ging iets mis
 error.500.message=Er is een onverwachte fout opgetreden. Probeer het later opnieuw.
 error.back.home=Terug naar Home
+
+# Contact form validation
+contact.validation.name.required=Naam is verplicht
+contact.validation.name.size=Naam moet tussen 2 en 100 tekens zijn
+contact.validation.email.required=E-mail is verplicht
+contact.validation.email.invalid=Voer een geldig e-mailadres in
+contact.validation.email.size=E-mailadres moet minder dan 254 tekens zijn
+contact.validation.message.required=Bericht is verplicht
+contact.validation.message.size=Bericht moet tussen 10 en 2000 tekens zijn
+contact.validation.failed=Validatie mislukt
